--- a/CINESTOP/html/movies/trending/dune_part_2.html
+++ b/CINESTOP/html/movies/trending/dune_part_2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Comedy</title>
+    <title>Trending</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -216,7 +216,7 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="./dhurandhar.html"> <img
+            <a href="../bollywood/dhurandhar.html"> <img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNkGI3KOOjOqwrN4e9LBv6CEIDpLSHz2peNQ&s"
                     alt="Image 1"></a>
             <h3>Dhurandhar &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;★8.3</h3>
