home linking done

--- a/CINESTOP/html/home.html
+++ b/CINESTOP/html/home.html
@@ -271,7 +271,7 @@
 
     <center>
         <div class="movie-card-holder">
-            <a href="#"> <img
+            <a href="./movies/series/breaking_bad.html"> <img
                     src="https://m.media-amazon.com/images/M/MV5BMzU5ZGYzNmQtMTdhYy00OGRiLTg0NmQtYjVjNzliZTg1ZGE4XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
                     alt="Image 1" style="opacity: 0.5;"></a>
             <i class="fa-solid fa-lock icon-lock"></i>
@@ -280,7 +280,7 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
+            <a href="./movies/series/stranger_things.html"> <img
                     src="https://mir-s3-cdn-cf.behance.net/project_modules/hd/479dc087874857.62b25a3de4723.jpg"
                     alt="Image 2" style="opacity: 0.5;"></a>
             <i class="fa-solid fa-lock icon-lock"></i>
@@ -290,7 +290,7 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
+            <a href="./movies/series/mirzapur.html"> <img
                     src="https://i.pinimg.com/736x/02/33/c8/0233c88750b7a53b53691ce194dc6fcb.jpg"
                     alt="Image 3" style="opacity: 0.5;"></a>
             <i class="fa-solid fa-lock icon-lock"></i>
@@ -301,7 +301,7 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"><img
+            <a href="./movies/series/kota_factory.html"><img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK7xVqO4vLQjK7TGeXsGE7_lKAu_fZ3Ud0YQ&s"
                     alt="Image 4" style="opacity: 0.5;"></a>
             <i class="fa-solid fa-lock icon-lock"></i>
@@ -311,7 +311,7 @@
         </div>
 
         <div class="movie-card-holder">
-            <a href="#"> <img
+            <a href="./movies/series/scam_1992.html"> <img
                     src="https://m.media-amazon.com/images/M/MV5BNGRkOTVjODgtNTBmZS00MDQ3LWE3ZjQtM2ZiNDQ3OWJkMjM2XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"
                     alt="Image 5" style="opacity: 0.5;"></a>
             <i class="fa-solid fa-lock icon-lock"></i>
