Final Touch Done

--- a/CINESTOP/html/contact.html
+++ b/CINESTOP/html/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Contact</title>
+    <title>Contact - CineStop </title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -138,10 +138,10 @@
         
             <h2 class= "contact-left-heading"> <span>Quick </span> Links</h2>
             <ul class="icon-list">
-                <li><i class="fa-brands fa-twitter" style="font-size: 20px;"></i></li>
-                <li><i class="fa-brands fa-whatsapp" style="font-size: 22px; font-weight: bold;"></i></li>
-                <li><i class="fa-brands fa-google" style="font-size: 20px;"></i></li>
-                <li><i class="fa-brands fa-instagram" style="font-size: 22px; font-weight: bold;"></i></li>
+                <li> <a href="https://x.com/" target="_blank" style="color: white;" > <i class="fa-brands fa-x-twitter" style="font-size: 20px;"></i></a></li>
+                <li> <a href="https://web.whatsapp.com/" target="_blank" style="color: white;" > <i class="fa-brands fa-whatsapp" style="font-size: 22px; font-weight: bold;"></i> </a></li>
+                <li> <a href="mailto:cinestop@gmail.com" target="_blank" style="color: white;" >  <i class="fa-brands fa-google" style="font-size: 20px;"></i> </a> </li>
+                <li> <a href="https://www.instagram.com/" target="_blank" style="color: white;" >  <i class="fa-brands fa-instagram" style="font-size: 22px; font-weight: bold;"></i> </a></li>
             </ul>
 
         </div>
