--- a/CINESTOP/html/home.html
+++ b/CINESTOP/html/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>CineStop</title>
+    <title>CineStop </title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -99,7 +99,7 @@
             of movies and series. No ads, just cinema.
         </h2>
 
-        <a id="about-banner-button" href="navbar.html" style="text-decoration: none;"> GET MORE
+        <a id="about-banner-button" href="contact.html" style="text-decoration: none;"> GET MORE
             INFO </a>
     </div>
 
