--- a/CINESTOP/html/movies/series/stranger_things.html
+++ b/CINESTOP/html/movies/series/stranger_things.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Adventure</title>
+    <title>Strangers Things - CineStop</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
