--- a/CINESTOP/html/movies/comedy/chup_chup_ke.html
+++ b/CINESTOP/html/movies/comedy/chup_chup_ke.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Comedy</title>
+    <title>Chup Chup ke - CineStop</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
