--- a/CINESTOP/html/movies/hollywood/interstellar.html
+++ b/CINESTOP/html/movies/hollywood/interstellar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hollywood</title>
+    <title>Interstellar - CineStop</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
