--- a/CINESTOP/html/movies/lollywood/parwaz_hai_junoon.html
+++ b/CINESTOP/html/movies/lollywood/parwaz_hai_junoon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Lollywood</title>
+    <title>Parwaz Hai Junoon - CineStop</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
