--- a/CINESTOP/html/movies/lollywood/teefa_in_trouble.html
+++ b/CINESTOP/html/movies/lollywood/teefa_in_trouble.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Lollywood</title>
+    <title>Teefa In Trouble - CineStop</title>
     <link rel="stylesheet" href="../../../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
